--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -42,8 +42,12 @@
                 <br>
                 <br>
                 {% if naughty == True %}
-                    <h1>You have {{ naughtyCount }} cancel-worthy tweet(s)</h1>
+                    {% if nextTokenBool == True %}
+                    <h1>You have 300+ cancel-worthy tweet(s)</h1>
                     {% else %}
+                    <h1>You have {{ naughtyCount }} cancel-worthy tweet(s)</h1>
+                    {% endif %}
+                {% else %}
                     <h1>You are not cancelled!</h1>
                 {% endif %}
                 {% if nextTokenBool == True %}
