--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -51,15 +51,15 @@
                     <h1>You are not cancelled!</h1>
                 {% endif %}
                 {% if nextTokenBool == True %}
-                    <h3>There were more than {{ naughtyCount }} tweets found, please delete some then sign in again to get the rest.</h3>
+                    <h3>There were more than 300 tweets found, please delete some then sign in again to get the rest.</h3>
                 {% endif %}
                 <h4>Tip: You can click/tap on a tweet to bring you to it on Twitter and you can delete it from there!</h4>
                 <h4>Tip 2: Occasionally, tweets won't load at the very top, so don't forget to keep scrolling down the page if there is an empty section.</h4>
+               
                 {% for tweet,id,username in zipped %}
-
                <br>
                <blockquote class="twitter-tweet" data-lang="en" data-align="center" data-dnt="true">
-                   <p lang="en" ></p> <a href="https://twitter.com/{{username}}/status/{{id}}" target="_blank" rel="noopener noreferrer"> </a>
+                   <p lang="en" ></p> <a href="https://twitter.com/{{username}}/status/{{id}}"> </a>
                 </blockquote>
 
                 <br>
