--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -74,20 +74,27 @@
                 <br>
                 <div id="container"></div>
 
-                {% for tweet,id,username in zipped %}
-                <br>
-                    <script>
-                        twttr.widgets.createTweet(
-                            '{{id}}',
-                            document.getElementById('container'),
-                            {
-                                align: 'center'
-                            }
-                        );
-                    </script>
+                {% if naughtyCount <= 50 %}
                     <br>
-                {% endfor %}
-
+                    <blockquote class="twitter-tweet" data-lang="en" data-align="center" data-dnt="true">
+                        <p lang="en" ></p> <a href="https://twitter.com/{{username}}/status/{{id}}" target="_blank" rel="noopener noreferrer"> </a>
+                    </blockquote>
+                    <br>
+                {% else %}
+                    {% for tweet,id,username in zipped %}
+                    <br>
+                        <script>
+                            twttr.widgets.createTweet(
+                                '{{id}}',
+                                document.getElementById('container'),
+                                {
+                                    align: 'center'
+                                }
+                            );
+                        </script>
+                        <br>
+                    {% endfor %}
+                {% endif %}
 
             </div>
         </div>
