--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -75,11 +75,13 @@
                 <div id="container"></div>
 
                 {% if naughtyCount <= 50 %}
+                    {% for tweet,id,username in zipped %}
                     <br>
                     <blockquote class="twitter-tweet" data-lang="en" data-align="center" data-dnt="true">
                         <p lang="en" ></p> <a href="https://twitter.com/{{username}}/status/{{id}}" target="_blank" rel="noopener noreferrer"> </a>
                     </blockquote>
                     <br>
+                    {% endfor %}
                 {% else %}
                     {% for tweet,id,username in zipped %}
                     <br>
