--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -52,7 +52,7 @@
             <div id="main">
                 <br>
                 <h1 style="color: green;">Successfully authenticated @{{screen_name}}!</h1>
-                <p id="main_text">Do not refresh this page, otherwise an error may occur. Tweets may take time to load.</p>
+                <p id="main_text">Do not refresh this page, otherwise an error may occur.</p>
                 <p id="main_text"><b>Protected Twitter accounts will not work with this due to how the Twitter search works.</b></p>
                <br>
                 <a href="{{ url_for('home') }}"><button type="button" id="backButton">Back to Start</button></a>
@@ -71,6 +71,7 @@
                     <h3>There were more than 300 tweets found, please delete some then sign in again to get the rest.</h3>
                 {% endif %}
                 <h4>Tip: You can click/tap on a tweet to bring you to it on Twitter and you can delete it from there!</h4>
+                <h4>Tweets may take time to load. If nothing loads, please use the Back to Start button and try again.</h4>
                 <br>
                 <div id="container"></div>
 
