--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -64,6 +64,10 @@
                     {% else %}
                     <h1>You have {{ naughtyCount }} cancel-worthy tweet(s)</h1>
                     {% endif %}
+                    {% if highlyOffensiveWordCount <= 20 %}
+                    <h2>Based on the words found in your tweets, you have a low chance of being cancelled!</h2>
+                    {% else %}
+                    <h2>Based on the words found in your tweets, you have a high chance of being cancelled!</h2>
                 {% else %}
                     <h1>You are not cancelled!</h1>
                 {% endif %}
