--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -59,15 +59,19 @@
                 <br>
                 <br>
                 {% if naughty == True %}
+                
                     {% if nextTokenBool == True %}
                     <h1>You have 300+ cancel-worthy tweet(s)</h1>
                     {% else %}
                     <h1>You have {{ naughtyCount }} cancel-worthy tweet(s)</h1>
                     {% endif %}
+
                     {% if highlyOffensiveWordCount <= 20 %}
                     <h2>Based on the words found in your tweets, you have a low chance of being cancelled!</h2>
                     {% else %}
                     <h2>Based on the words found in your tweets, you have a high chance of being cancelled!</h2>
+                    {% endif %}
+
                 {% else %}
                     <h1>You are not cancelled!</h1>
                 {% endif %}
