--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link rel="stylesheet" href="{{ url_for('static',   filename='css/styles.css') }}">
 
         <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename= 'apple-touch-icon.png') }}">
