--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="{{ url_for('static',   filename='css/styles.css') }}">
 
     <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename= 'apple-touch-icon.png') }}">
@@ -33,7 +34,7 @@
                 
                 <h2 id="h2_white">What is Am I Cancelled?</h2>
                 <p id="main_text_white">
-                    Am I Cancelled? is a Twitter Web App that searches through a large <br>bank of words that may be cancel-worthy,<br>and then checks your account for them. <br> Often times people can change over many years,<br>so they at least deserve a second chance.
+                    Am I Cancelled? is a Twitter Web App that searches through a large <br>bank of words that may be cancel-worthy,<br>and then checks your account for them. <br> Often times people can change over many years, so they at least deserve a second chance.
                     <br>
                 </p>
             </div>
