--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -34,7 +34,7 @@
                 
                 <h2 id="h2_white">What is Am I Cancelled?</h2>
                 <p id="main_text_white">
-                    Am I Cancelled? is a Twitter Web App that searches through a large <br>bank of words that may be cancel-worthy,<br>and then checks your account for them. <br> Often times people can change over many years, so they at least deserve a second chance.
+                    Am I Cancelled? is a Twitter Web App that searches through a large bank of words that may be cancel-worthy, and then checks your account for them. Often times people can change over many years, so they at least deserve a second chance.
                     <br>
                 </p>
             </div>
