--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -34,16 +34,16 @@
                 
                 <h2 id="h2_white">What is Am I Cancelled?</h2>
                 <p id="main_text_white">
-                    Am I Cancelled? is a Twitter Web App that searches through a large bank of words that may be cancel-worthy, and then checks your account for them.<br>Often times people can change over many years, so they at least deserve a second chance.
+                    Am I Cancelled? is a Twitter Web App that searches through a large bank of words that may be cancel-worthy, and then checks your account for them. Often times people can change over many years, so they at least deserve a second chance.
                     <br>
                 </p>
             </div>
 
             <br>
-            <p>For the best experience, it's recommended to open this webpage in<br>a full browser app such as Safari or Chrome, either on your phone or computer,<br>separate from opening this webpage from a link (ie. Snapchat, Instagram).</p>
+            <p>For the best experience, it's recommended to open this webpage in a full browser app such as Safari or Chrome, either on your phone or computer, separate from opening this webpage from a link (ie. Snapchat, Instagram).</p>
             <h4>Have Word Suggestions?</h4>
             <p id="main_text">
-                If you have any words to suggest that may not be included<br>in the search, please email me using the email link in the footer<br>of this page, or direct message me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
+                If you have any words to suggest that may not be included in the search, please email me using the email link in the footer of this page, or direct message me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
             </p>
 
             <!-- 
@@ -64,13 +64,13 @@
                 
             <h4>Additional Information</h4>
             <p id="main_text">
-                Due to the nature of the Twitter Search API,<br>accounts that are private will not be able to use this.
+                Due to the nature of the Twitter Search API, accounts that are private will not be able to use this.
                 <br><br>
-                I do <b>not</b> collect or store any of your information.<br>All of the authentication is done following the Twitter + OAuth standard.
+                I do <b>not</b> collect or store any of your information. All of the authentication is done following the Twitter + OAuth standard.
                 <br><br>
-                This is my first official project, so it may not be perfect.<br>Please contact me if there any major bugs.
+                This is my first official project, so it may not be perfect. Please contact me if there any major bugs.
                 <br><br>
-                You may find that some words are not cancel-worthy in the given<br>context of the tweet. If that is the case, please ignore.
+                You may find that some words are not cancel-worthy in the given context of the tweet. If that is the case, please ignore.
                 <br><br>
                 Ultimately, I hope this can be used responsibly.
                 <br><br>
