--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -28,8 +28,7 @@ h4 {
 p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0 auto;
-    text-align: justify;
-    text-justify: auto;
+    text-align: center;
     display: inline;
 }
 
