--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -32,11 +32,13 @@
                 <h2 id="h2_white">Get Started:</h2>
                 <a href="{{ authorize_url }}?oauth_token={{ oauth_token }}"><img src="{{ url_for('static', filename='twitter_button.png') }}" id="twitter_button"/></a>
                 
-                <h2 id="h2_white">What is Am I Cancelled?</h2>
-                <p id="main_text_white">
-                    Am I Cancelled? is a Twitter Web App that searches through a large bank of words that may be cancel-worthy, and then checks your account for them. Often times people can change over many years, so they at least deserve a second chance.
-                    <br>
-                </p>
+                <div id="text_div">
+                    <h2 id="h2_white">What is Am I Cancelled?</h2>
+                    <p id="main_text_white">
+                        Am I Cancelled? is a Twitter Web App that searches through a large bank of words that may be cancel-worthy, and then checks your account for them. Often times people can change over many years, so they at least deserve a second chance.
+                        <br>
+                    </p>
+                </div>
             </div>
 
             <br>
