--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -42,6 +42,9 @@
             </div>
 
             <br>
+            <div id="text_div">
+
+            
             <p>For the best experience, it's recommended to open this webpage in a full browser app such as Safari or Chrome, either on your phone or computer, separate from opening this webpage from a link (ie. Snapchat, Instagram).</p>
             <h4>Have Word Suggestions?</h4>
             <p id="main_text">
@@ -78,7 +81,7 @@
                 <br><br>
                 Lastly, I hope you enjoy it. :)
             </p>
-
+            </div>
         </div>
     </div>
     <script id="twitter-wjs" type="text/javascript" async defer src="//platform.twitter.com/widgets.js"></script>
