--- a/templates/cancelMe_Error.html
+++ b/templates/cancelMe_Error.html
@@ -29,6 +29,8 @@
             <br>
             <br>
             <div id="main">
+                <div id="text_div">
+
                 <h1 style="color: red;">There has been an error!<br> Reason: {{ error_message }}</h1>
      
                 <h4>If this is your first time seeing this message after logging in:</h4>
@@ -41,6 +43,7 @@
                  <p id="main_text">
                     You can also contact me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3</a> if there are still issues.
                 </p>
+                </div>
             </div>
         </div>
 
