--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -52,6 +52,7 @@
 
         <div id="div2alt">
             <div id="main">
+                <div id="text_div">
                 <br>
                 <h1 style="color: green;">Successfully authenticated @{{screen_name}}!</h1>
                 <p id="main_text">Do not refresh this page, otherwise an error may occur.</p>
@@ -76,6 +77,7 @@
                 <h4>Tip: You can click/tap on a tweet to bring you to it on Twitter and you can delete it from there!</h4>
                 <h4>Tweets may take time to load. If nothing loads, please use the Back to Start button and try again.</h4>
                 <br>
+            </div>
                 <div id="container"></div>
 
                 {% if naughtyCount <= 50 %}
