--- a/templates/cancelMe_Error.html
+++ b/templates/cancelMe_Error.html
@@ -21,7 +21,7 @@
     <body>
 
         <div id="div1">
-            <h1 class="header">Am I Cancelled? <img src="{{ url_for('static', filename= 'amICancelled_logo.jpg') }}" id="app_logo"></h1>
+            <h1 class="header">Am I Cancelled? <img src="{{ url_for('static', filename= 'amICancelled_logo.jpg') }}" id="app_logo" alt="Am I Cancelled Logo"></h1>
         </div>
 
 
@@ -49,7 +49,7 @@
 
     <footer id="footer">
         <p id="footer-text">Created By: Tony Alas, 2020.   <a href="mailto:tony_alas99@hotmail.com" id="email_link">Contact me via email.</a>
-            <a href="http://alas11.myweb.cs.uwindsor.ca" id="email_link" target="_blank" rel="noopener noreferrer">Visit my Personal Website.</a>
+            <a href="http://alas11.myweb.cs.uwindsor.ca" id="email_link" target="_blank" rel="noopener noreferrer">Personal Website.</a>
             </p>
     </footer>
 
