--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -22,7 +22,7 @@
 <body>
 
     <div id="div1">
-        <h1 class="header">Am I Cancelled? <img src="{{ url_for('static', filename= 'amICancelled_logo.jpg') }}" id="app_logo"></h1>
+        <h1 class="header">Am I Cancelled? <img src="{{ url_for('static', filename= 'amICancelled_logo.jpg') }}" id="app_logo" alt="Am I Cancelled Logo"></h1>
     </div>
 
     <div id="div2alt">
@@ -30,7 +30,7 @@
 
             <div id="inner_div">
                 <h2 id="h2_white">Get Started:</h2>
-                <a href="{{ authorize_url }}?oauth_token={{ oauth_token }}"><img src="{{ url_for('static', filename='twitter_button.png') }}" id="twitter_button"/></a>
+                <a href="{{ authorize_url }}?oauth_token={{ oauth_token }}"><img src="{{ url_for('static', filename='twitter_button.png') }}" id="twitter_button" alt="Twitter Sign in Button"/></a>
                 
                 <div id="text_div">
                     <h2 id="h2_white">What is Am I Cancelled?</h2>
@@ -88,7 +88,7 @@
 
     <footer id="footer">
         <p id="footer-text">Created By: Tony Alas, 2020.   <a href="mailto:tony_alas99@hotmail.com" id="email_link">Contact me via email.</a>
-        <a href="http://alas11.myweb.cs.uwindsor.ca" id="email_link" target="_blank" rel="noopener noreferrer">Visit my Personal Website.</a>
+        <a href="http://alas11.myweb.cs.uwindsor.ca" id="email_link" target="_blank" rel="noopener noreferrer">Personal Website.</a>
         </p>
     </footer>
 
