--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -3,9 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="{{ url_for('static',   filename='css/styles.css') }}">
-
     <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename= 'apple-touch-icon.png') }}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename= 'favicon-32x32.png') }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename= 'favicon-16x16.png') }}">
@@ -13,25 +11,19 @@
     <link rel="mask-icon" href="{{ url_for('static', filename='safari-pinned-tab.svg') }}" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-
     <script data-ad-client="ca-pub-2309537375318258" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
     <title>Am I Cancelled? Start Page</title>
 </head>
 
 <body>
-
     <div id="div1">
         <h1 class="header">Am I Cancelled? <img src="{{ url_for('static', filename= 'amICancelled_logo.jpg') }}" id="app_logo" alt="Am I Cancelled Logo"></h1>
     </div>
-
     <div id="div2alt">
         <div id="main">
-
             <div id="inner_div">
                 <h2 id="h2_white">Get Started:</h2>
                 <a href="{{ authorize_url }}?oauth_token={{ oauth_token }}"><img src="{{ url_for('static', filename='twitter_button.png') }}" id="twitter_button" alt="Twitter Sign in Button"/></a>
-                
                 <div id="text_div">
                     <h2 id="h2_white">What is Am I Cancelled?</h2>
                     <p id="main_text_white">
@@ -40,33 +32,13 @@
                     </p>
                 </div>
             </div>
-
             <br>
             <div id="text_div">
-
-            
             <p>For the best experience, it's recommended to open this webpage in a full browser app such as Safari or Chrome, either on your phone or computer, separate from opening this webpage from a link (ie. Snapchat, Instagram).</p>
             <h4>Have Word Suggestions?</h4>
             <p id="main_text">
                 If you have any words to suggest that may not be included in the search, please email me using the email link in the footer of this page, or direct message me at <a href="https://twitter.com/tonyalas3" target="_blank" rel="noopener noreferrer">@tonyalas3.</a>
             </p>
-
-            <!-- 
-            <br>
-
-            <blockquote class="twitter-tweet" data-lang="en" data-align="center" data-dnt="true">
-                <p lang="en" ></p> <a href="https://twitter.com/elliottrogers11/status/1252290073346953221" target="_blank" rel="noopener noreferrer"> </a>
-             </blockquote>
-            -->
-
-            <!--
-                <h4>Known Bugs</h4>
-                <p id="main_text">
-                    When trying to login, a failure may occur which results in an error page. <br> This is a known bug that strangely only happens sometimes.<br>
-                    I am working on a solution to fix this. Please try following the steps<br>provided on the error page if it does not work on the first login attempt.
-                </p>
-            -->
-                
             <h4>Additional Information</h4>
             <p id="main_text">
                 Due to the nature of the Twitter Search API, accounts that are private will not be able to use this.
@@ -88,12 +60,9 @@
 
     <footer id="footer">
         <p id="footer-text">Created By: Tony Alas, 2020.   <a href="mailto:tony_alas99@hotmail.com" id="email_link">Contact me via email.</a>
-        <a href="http://alas11.myweb.cs.uwindsor.ca" id="email_link" target="_blank" rel="noopener noreferrer">Personal Website.</a>
+        <a href="http://alas11.myweb.cs.uwindsor.ca" id="email_link" target="_blank" rel="noopener noreferrer">My Personal Website.</a>
         </p>
     </footer>
 
 </body>
-
-
-
 </html>
