--- a/templates/cancelMe_Error.html
+++ b/templates/cancelMe_Error.html
@@ -25,7 +25,7 @@
                 <div id="text_div">
                 <h1 style="color: red;">There has been an error!<br> Reason: {{ error_message }}</h1>
                 <h4>If this is your first time seeing this message after logging in:</h4>
-                <p id="main_text">Please try refreshing this page until it works. <br>(Due to the server, it may take up to 4-5 reloads to work)</p> 
+                <p id="main_text">Please try refreshing this page until it works. (Due to the server, it may take up to 4-5 reloads to work)</p> 
                 <h4>Otherwise:</h4> 
                 <p id="main_text">Please go back to the app homepage using the button below and try again.</p>
                 <a href="{{ url_for('home') }}"><button type="button" id="backButton">Back to Start</button></a>
